# meshsaliency

./: CMakeLists.txt  README.md  backproject_saliency.cc  buildit.sh  find_best_view.py  geometry_processing.cc  glfw_controller.py  graphics_math.py  image_fragment.glsl  image_vertex.glsl  image_view.py  main.cc  mesh_fragment.glsl  mesh_vertex.glsl  mesh_view.py  mlnet_model.py  render_batch_views.py  render_views.cc  render_views.py  run_batch_saliency.sh  runit.sh  shader_program.py  spectral_saliency.cc  test_geometry_processing.cc  test_glfw_controller.py  test_graphics_math.py  test_mlnet.py  view_setting.cc
Deepnet/data/: create_sal.py  create_train.py
Deepnet/source/: saliency_multiple.py  saliency_single.py
cmake/Modules/: FindLIBIGL.cmake
include/: common.h  constants.h  debug_macros.h  geometry.h  geometry_processing.h  logger.h  render_request.h  view_setting.h
